<resources>
    <string name="app_name">SuperHero List</string>
    <string name="a">A</string>
    <string name="larntech">larntech</string>
    <string name="beername">Hero name</string>
    <string name="beer_name">Hero name</string>
    <string name="beer_list">SuperheroList</string>
    <string name="superhero">SuperHero</string>
    <string name="powerstats">Харрактеристики:</string>
    <string name="intelligence">Интеллект</string>
    <string name="strength">Сила</string>
    <string name="World">Вселенная</string>
    <string name="speed">Скорость</string>
    <string name="durability">Выносливость</string>
    <string name="power">Мощь</string>
    <string name="combat">Боеспособность</string>
    <string name="chose_symbol">Chose first symbol of hero name</string>
    <string name="list_search">search</string>
</resources>